...
                                ProgressView()
                                    .padding(.top, 60)
                            }
                            else if !viewModel.longDistanceRanking.isEmpty {
                                // LeaderBoards
                                LeaderboardNavigationView(viewModel: viewModel, navigationPath: $navigationPath, title: "Long Distance", leaderboard: viewModel.longDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: true, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("longDistanceNavigationView"))
                                
                                LeaderboardNavigationView(viewModel: viewModel,navigationPath: $navigationPath, title: "Short Distance", leaderboard: viewModel.shortDistanceRanking, gridItems: gridItemsCompactDevice, leaderboardType: false, isPresenting: $isPresenting)
                                    .overlay(Color.clear.accessibilityIdentifier("shortDistanceNavigationView"))
                            }
                            
                            if viewModel.errorMessage != nil {
                                if colorScheme == .dark {
                                    Image("no_connection_dark")
                                        .resizable()
...
        }
        .background(colorScheme == .dark ? AppColors.backColorDark : AppColors.backColorLight)
        .sheet(isPresented: $legendTapped, onDismiss: {isPresenting = false}) {
            LegendBadgeView(isPresented: $legendTapped, isPresenting: $isPresenting)
                .presentationDetents([.fraction(0.95)])
                .presentationCornerRadius(15)
                .overlay(Color.clear.accessibilityIdentifier("infoBadgesView"))
        }
        .onAppear {
            isPresenting = false
            if users.first != nil {
                Task {
                    await withTaskGroup(of: Void.self) { group in
...
    var body: some View {
        Text("Ranking")
            .font(.system(size: 32).bold())
            .padding(.vertical)
            .fontWeight(.semibold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("rankingTitle")
    }
}

private struct LeaderboardNavigationView: View {
    @Environment(\.colorScheme) var colorScheme: ColorScheme
    @Environment(\.horizontalSizeClass) var horizontalSizeClass
    @ObservedObject var viewModel: RankingViewModel
    @Binding var navigationPath: NavigationPath
    let title: String
    let leaderboard: [RankingElement]
    var gridItems: [GridItem]
    let leaderboardType: Bool
    @Binding var isPresenting: Bool
    
    var body: some View {
        Button(action: {
...
