...
                .textInputAutocapitalization(.never)
                .autocapitalization(.none)
                .keyboardType(.emailAddress)
                .padding()
                .background(Color.gray.opacity(0.2))
                .cornerRadius(8)
                .accessibilityIdentifier("emailTextField")
            
            SecureField("Password", text: $viewModel.password)
                .padding()
                .background(Color.gray.opacity(0.2))
                .cornerRadius(8)
                .textContentType(.oneTimeCode)
                .accessibilityIdentifier("passwordSecureField")
        }
    }
}

private struct ResetPasswordButtonView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
...

private struct MessagesView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
    
    var body: some View {
        // error message
        if let errorMessage = viewModel.errorMessage {
            Text(errorMessage)
                .foregroundColor(.red)
                .accessibilityIdentifier("errorMessageLabelLogin")
        }
        
        if let resendMessage = viewModel.resendEmail {
...
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(AppColors.mainColor)
                    .cornerRadius(30)
            }
            .disabled(viewModel.isLoading)
            .accessibilityIdentifier("loginButton")
            
            
            HStack {
                Rectangle()
                    .frame(height: 1)
                    .foregroundColor(.gray)
...
