...
                            legendTapped = true
                        }
                    }) {
                        Image(systemName: "info.circle")
                            .font(.title3)
                    }
                    .accessibilityIdentifier("infoBadgesButton")
                }
                .padding(EdgeInsets(top: 15, leading: 15, bottom: 0, trailing: 15))
                
                HStack {
                    if horizontalSizeClass == .compact {
                        if inline {
...
                        BadgeView(badges: badges, dim: (UIScreen.main.bounds.width/2)/4, inline: inline, allBadgeTypes: true)
                            .padding()
                    }
                }
            }
        }
        .overlay(Color.clear.accessibilityIdentifier("userBadgesView"))
        
        .padding(EdgeInsets(top: 5, leading: 15, bottom: 7, trailing: 15))
    }
}

